fixed z-indexing

--- a/src/app/core/layout/header/header.component.css
+++ b/src/app/core/layout/header/header.component.css
@@ -4,6 +4,7 @@
   height: 10vh;
   font-weight: bold;
   position: fixed;
+  z-index: 10;
 }
 
 .nav a {
@@ -109,6 +110,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .modal__linkContainer li {
